[package]
name = "rustole"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
pollster = "0.4.0"
wgpu = "24.0.0"
winit = "0.30.9"
glyph_brush = "0.7.12"
wgpu_text = "0.9.2"
env_logger = "0.11.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "4.0"
nix = { version = "0.29", features = ["term", "process", "fs", "poll"] }
unicode-width = "0.1"
vte = "0.15"